--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "nexmo/laravel": "^2.2",
         "spatie/laravel-analytics": "^3.9",
         "spatie/laravel-backup": "^6.7",
-        "tymon/jwt-auth": "1.0.*"
+        "tymon/jwt-auth": "1.0.*",
+        "cloudinary/cloudinary_php": "^2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
